--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "fastapi_poe>=0.0.19",
+    "fastapi",
+    "httpx",
+    "httpx-sse",
+    "pydantic>2",
     "sse-starlette>=1.0.0",
     "fireworks-ai>=0.6.0",
     "uvicorn>=0.23.2",
