[FC] Add deps for persistance layer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "numpy",
     "google-cloud-storage",
     "qrcode",
+    "sqlalchemy",
+    "asyncpg",
 ]
 
 [project.scripts]
