Migrate to mainline fastapi_poe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "httpx-sse",
     "pydantic>2",
     "sse-starlette>=1.0.0",
+    "fastapi-poe>=0.0.29",
     "fireworks-ai>=0.6.0",
     "uvicorn>=0.23.2",
     "typing_extensions>=4.0.0",
